# neuroai-api

./: README.md  pyproject.toml  requirements.txt  vercel.json
app/: auth.py  main.py  mri.py  utils.py
